--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
     <title>Games on Steroids</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.4/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.4/react-dom.js"></script>
+    <script src="https://npmcdn.com/history/umd/History.js"></script>
+    <script src="https://npmcdn.com/react-router/umd/ReactRouter.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
+
+    <script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
+
     <script type="text/javascript" src="games/play/game.js"></script>
     <script type="text/javascript" src="games/play/lobby.js"></script>
+    <script type="text/javascript" src="games/play/serverlobby.js"></script>
+    <script type="text/javascript" src="games/play/clientlobby.js"></script>
+    <script type="text/javascript" src="games/play/lobbyservice.js"></script>
     <script type="text/javascript" src="games/minesweeper/shared.js"></script>
     <script type="text/javascript" src="games/minesweeper/game.js"></script>
     <script type="text/javascript" src="games/minesweeper/service.js"></script>
+    <script type="text/babel" src="games/minesweeper/app.js"></script>
     <script type="text/babel" src="js/app.js"></script>
 
   </head>
