--- a/index.html
+++ b/index.html
@@ -15,19 +15,26 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 
+    <script type="text/javascript" src="games/play/utils.js"></script>
     <script type="text/javascript" src="games/play/game.js"></script>
     <script type="text/javascript" src="games/play/lobby.js"></script>
-    <script type="text/javascript" src="games/play/serverlobby.js"></script>
+    <script type="text/javascript" src="games/play/signaling.js"></script>
+    <script type="text/javascript" src="games/play/client.js"></script>
     <script type="text/javascript" src="games/play/clientlobby.js"></script>
+    <script type="text/javascript" src="games/play/gameservice.js"></script>
+    <script type="text/javascript" src="games/minesweeper/service.js"></script>
+    <script type="text/javascript" src="games/play/serverlobby.js"></script>
     <script type="text/javascript" src="games/play/lobbyservice.js"></script>
     <script type="text/javascript" src="games/minesweeper/shared.js"></script>
-    <script type="text/javascript" src="games/minesweeper/game.js"></script>
-    <script type="text/javascript" src="games/minesweeper/service.js"></script>
-    <script type="text/babel" src="games/minesweeper/app.js"></script>
-    <script type="text/babel" src="js/app.js"></script>
+    <script type="text/javascript" src="games/minesweeper/game/game.js"></script>
+    <script type="text/javascript" src="games/minesweeper/game/minefield.js"></script>
+    <script type="text/javascript" src="games/minesweeper/app.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 
   </head>
   <body>
     <div id="content"></div>
+
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
