--- a/index.html
+++ b/index.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
+<head>
+    <meta charset="utf-8"/>
+
     <title>Games on Steroids</title>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.4/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.4/react-dom.js"></script>
     <script src="https://npmcdn.com/history/umd/History.js"></script>
     <script src="https://npmcdn.com/react-router/umd/ReactRouter.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
-
     <script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 
-    <script type="text/javascript" src="games/play/utils.js"></script>
-    <script type="text/javascript" src="games/play/game.js"></script>
-    <script type="text/javascript" src="games/play/lobby.js"></script>
-    <script type="text/javascript" src="games/play/signaling.js"></script>
-    <script type="text/javascript" src="games/play/client.js"></script>
-    <script type="text/javascript" src="games/play/gameservice.js"></script>
-    <script type="text/javascript" src="games/play/lobbyservice.js"></script>
+    <script type="text/javascript" src="play/utils.js"></script>
+    <script type="text/javascript" src="play/client/game.js"></script>
+    <script type="text/javascript" src="play/shared.js"></script>
+    <script type="text/javascript" src="play/server/serverlobby.js"></script>
+    <script type="text/javascript" src="play/signaling.js"></script>
+    <script type="text/javascript" src="play/client.js"></script>
+    <script type="text/javascript" src="play/server/gameservice.js"></script>
+    <script type="text/javascript" src="play/client/clientlobby.js"></script>
+    <script type="text/javascript" src="play/lobbyservice.js"></script>
     <script type="text/javascript" src="games/minesweeper/service.js"></script>
     <script type="text/javascript" src="games/minesweeper/shared.js"></script>
     <script type="text/javascript" src="games/minesweeper/game/game.js"></script>
     <script type="text/javascript" src="games/minesweeper/game/minefield.js"></script>
     <script type="text/javascript" src="games/minesweeper/app.js"></script>
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="components/lobbycomponent.js"></script>
+    <script type="text/javascript" src="components/chat.js"></script>
+    <script type="text/javascript" src="components/gamedescription.js"></script>
+    <script type="text/javascript" src="components/gamelist.js"></script>
+    <script type="text/javascript" src="components/header.js"></script>
+    <script type="text/javascript" src="components/nomatch.js"></script>
 
-  </head>
-  <body>
-    <div id="content"></div>
+</head>
+<body>
+<div id="content"></div>
 
-    <script type="text/javascript" src="js/app.js"></script>
-  </body>
+<script type="text/javascript" src="components/app.js"></script>
+</body>
 </html>
