working game replay

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
     <script type="text/javascript" src="play/utils.js"></script>
     <script type="text/javascript" src="play/client/game.js"></script>
+    <script type="text/javascript" src="play/client/playerinfo.js"></script>
     <script type="text/javascript" src="play/shared.js"></script>
     <script type="text/javascript" src="play/server/serverlobby.js"></script>
-    <script type="text/javascript" src="play/signaling.js"></script>
+    <script type="text/javascript" src="play/signalingchannel.js"></script>
+    <script type="text/javascript" src="play/signalingservice.js"></script>
     <script type="text/javascript" src="play/client.js"></script>
     <script type="text/javascript" src="play/server/gameservice.js"></script>
     <script type="text/javascript" src="play/client/clientlobby.js"></script>
