--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="play/utils.js"></script>
     <script type="text/javascript" src="play/client/game.js"></script>
     <script type="text/javascript" src="play/client/playerinfo.js"></script>
-    <script type="text/javascript" src="play/shared.js"></script>
+    <script type="text/javascript" src="play/messages.js"></script>
     <script type="text/javascript" src="play/server/serverlobby.js"></script>
     <script type="text/javascript" src="play/signalingchannel.js"></script>
     <script type="text/javascript" src="play/signalingservice.js"></script>
@@ -28,11 +28,11 @@
     <script type="text/javascript" src="play/server/gameservice.js"></script>
     <script type="text/javascript" src="play/client/clientlobby.js"></script>
     <script type="text/javascript" src="play/lobbyservice.js"></script>
-    <script type="text/javascript" src="games/minesweeper/service.js"></script>
-    <script type="text/javascript" src="games/minesweeper/shared.js"></script>
-    <script type="text/javascript" src="games/minesweeper/game/game.js"></script>
+    <script type="text/javascript" src="games/minesweeper/minesweeperservice.js"></script>
+    <script type="text/javascript" src="games/minesweeper/messages.js"></script>
+    <script type="text/javascript" src="games/minesweeper/game/minesweepergame.js"></script>
     <script type="text/javascript" src="games/minesweeper/game/minefield.js"></script>
-    <script type="text/javascript" src="games/minesweeper/app.js"></script>
+    <script type="text/javascript" src="games/minesweeper/minesweeperapp.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="components/lobbycomponent.js"></script>
     <script type="text/javascript" src="components/chat.js"></script>
