project structure cleanup

--- a/index.html
+++ b/index.html
@@ -17,22 +17,25 @@
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 
-    <script type="text/javascript" src="play/utils.js"></script>
-    <script type="text/javascript" src="play/client/game.js"></script>
-    <script type="text/javascript" src="play/client/playerinfo.js"></script>
-    <script type="text/javascript" src="play/messages.js"></script>
-    <script type="text/javascript" src="play/server/serverlobby.js"></script>
-    <script type="text/javascript" src="play/signalingchannel.js"></script>
-    <script type="text/javascript" src="play/signalingservice.js"></script>
-    <script type="text/javascript" src="play/client.js"></script>
-    <script type="text/javascript" src="play/server/gameservice.js"></script>
-    <script type="text/javascript" src="play/client/clientlobby.js"></script>
-    <script type="text/javascript" src="play/lobbyservice.js"></script>
-    <script type="text/javascript" src="games/minesweeper/minesweeperservice.js"></script>
-    <script type="text/javascript" src="games/minesweeper/messages.js"></script>
-    <script type="text/javascript" src="games/minesweeper/game/minesweepergame.js"></script>
-    <script type="text/javascript" src="games/minesweeper/game/minefield.js"></script>
-    <script type="text/javascript" src="games/minesweeper/minesweeperapp.js"></script>
+    <script type="text/javascript" src="play/Utils.js"></script>
+    <script type="text/javascript" src="play/client/Game.js"></script>
+    <script type="text/javascript" src="play/client/Sprite.js"></script>
+    <script type="text/javascript" src="play/client/PlayerInfo.js"></script>
+    <script type="text/javascript" src="play/Messages.js"></script>
+    <script type="text/javascript" src="play/server/Service.js"></script>
+    <script type="text/javascript" src="play/server/ServerLobby.js"></script>
+    <script type="text/javascript" src="play/SignalingChannel.js"></script>
+    <script type="text/javascript" src="play/SignalingService.js"></script>
+    <script type="text/javascript" src="play/server/Client.js"></script>
+    <script type="text/javascript" src="play/server/GameService.js"></script>
+    <script type="text/javascript" src="play/client/ClientLobby.js"></script>
+    <script type="text/javascript" src="play/LobbyService.js"></script>
+    <script type="text/javascript" src="games/minesweeper/server/MinesweeperService.js"></script>
+    <script type="text/javascript" src="games/minesweeper/Messages.js"></script>
+    <script type="text/javascript" src="games/minesweeper/client/MinesweeperGame.js"></script>
+    <script type="text/javascript" src="games/minesweeper/client/Minefield.js"></script>
+    <script type="text/javascript" src="games/minesweeper/client/MinesweeperApp.js"></script>
+    <script type="text/javascript" src="games/minesweeper/client/MinesweeperScore.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="components/lobbycomponent.js"></script>
     <script type="text/javascript" src="components/chat.js"></script>
