--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
     <script type="text/javascript" src="games/minesweeper/client/MinesweeperApp.js"></script>
     <script type="text/javascript" src="games/minesweeper/client/MinesweeperScore.js"></script>
     <script type="text/javascript" src="index.js"></script>
-    <script type="text/javascript" src="components/lobbycomponent.js"></script>
-    <script type="text/javascript" src="components/chat.js"></script>
-    <script type="text/javascript" src="components/gamedescription.js"></script>
-    <script type="text/javascript" src="components/gamelist.js"></script>
-    <script type="text/javascript" src="components/header.js"></script>
-    <script type="text/javascript" src="components/nomatch.js"></script>
+    <script type="text/javascript" src="components/LobbyComponent.js"></script>
+    <script type="text/javascript" src="components/Chat.js"></script>
+    <script type="text/javascript" src="components/GameDescription.js"></script>
+    <script type="text/javascript" src="components/GameList.js"></script>
+    <script type="text/javascript" src="components/Header.js"></script>
+    <script type="text/javascript" src="components/NoMatch.js"></script>
 
 </head>
 <body>
     <div id="content"></div>
-    <script type="text/javascript" src="components/app.js"></script>
+    <script type="text/javascript" src="components/App.js"></script>
 </body>
 </html>
