--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
     <link rel="stylesheet" href="css/main.css">
 
     <script type="text/javascript" src="play/Utils.js"></script>
+    <script type="text/javascript" src="play/client/EventDispatcher.js"></script>
+    <script type="text/javascript" src="play/client/Camera.js"></script>
     <script type="text/javascript" src="play/client/Game.js"></script>
     <script type="text/javascript" src="play/client/Sprite.js"></script>
     <script type="text/javascript" src="play/client/PlayerInfo.js"></script>
     <script type="text/javascript" src="play/Messages.js"></script>
     <script type="text/javascript" src="play/server/Service.js"></script>
     <script type="text/javascript" src="play/server/ServerLobby.js"></script>
+    <script type="text/javascript" src="play/server/Client.js"></script>
     <script type="text/javascript" src="play/SignalingChannel.js"></script>
     <script type="text/javascript" src="play/SignalingService.js"></script>
-    <script type="text/javascript" src="play/server/Client.js"></script>
     <script type="text/javascript" src="play/server/GameService.js"></script>
     <script type="text/javascript" src="play/client/ClientLobby.js"></script>
     <script type="text/javascript" src="play/LobbyService.js"></script>
