--- a/index.html
+++ b/index.html
@@ -17,38 +17,38 @@
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 
-    <script type="text/javascript" src="play/Utils.js"></script>
-    <script type="text/javascript" src="play/client/EventDispatcher.js"></script>
-    <script type="text/javascript" src="play/client/Camera.js"></script>
-    <script type="text/javascript" src="play/client/Game.js"></script>
-    <script type="text/javascript" src="play/client/Sprite.js"></script>
-    <script type="text/javascript" src="play/client/PlayerInfo.js"></script>
-    <script type="text/javascript" src="play/Messages.js"></script>
-    <script type="text/javascript" src="play/server/Service.js"></script>
-    <script type="text/javascript" src="play/server/ServerLobby.js"></script>
-    <script type="text/javascript" src="play/server/Client.js"></script>
-    <script type="text/javascript" src="play/SignalingChannel.js"></script>
-    <script type="text/javascript" src="play/SignalingService.js"></script>
-    <script type="text/javascript" src="play/server/GameService.js"></script>
-    <script type="text/javascript" src="play/client/ClientLobby.js"></script>
-    <script type="text/javascript" src="play/LobbyService.js"></script>
-    <script type="text/javascript" src="games/minesweeper/server/MinesweeperService.js"></script>
-    <script type="text/javascript" src="games/minesweeper/Messages.js"></script>
-    <script type="text/javascript" src="games/minesweeper/client/MinesweeperGame.js"></script>
-    <script type="text/javascript" src="games/minesweeper/client/Minefield.js"></script>
-    <script type="text/javascript" src="games/minesweeper/client/MinesweeperApp.js"></script>
-    <script type="text/javascript" src="games/minesweeper/client/MinesweeperScore.js"></script>
-    <script type="text/javascript" src="index.js"></script>
-    <script type="text/javascript" src="components/LobbyComponent.js"></script>
-    <script type="text/javascript" src="components/Chat.js"></script>
-    <script type="text/javascript" src="components/GameDescription.js"></script>
-    <script type="text/javascript" src="components/GameList.js"></script>
-    <script type="text/javascript" src="components/Header.js"></script>
-    <script type="text/javascript" src="components/NoMatch.js"></script>
+    <script type="text/javascript" src="play/Utils.js" defer="defer"></script>
+    <script type="text/javascript" src="play/client/EventDispatcher.js" defer="defer"></script>
+    <script type="text/javascript" src="play/client/Camera.js" defer="defer"></script>
+    <script type="text/javascript" src="play/client/Game.js" defer="defer"></script>
+    <script type="text/javascript" src="play/client/Sprite.js" defer="defer"></script>
+    <script type="text/javascript" src="play/client/PlayerInfo.js"> defer="defer"</script>
+    <script type="text/javascript" src="play/Messages.js" defer="defer"></script>
+    <script type="text/javascript" src="play/server/Service.js" defer="defer"></script>
+    <script type="text/javascript" src="play/server/ServerLobby.js" defer="defer"></script>
+    <script type="text/javascript" src="play/server/Client.js" defer="defer"></script>
+    <script type="text/javascript" src="play/SignalingChannel.js" defer="defer"></script>
+    <script type="text/javascript" src="play/SignalingService.js" defer="defer"></script>
+    <script type="text/javascript" src="play/server/GameService.js" defer="defer"></script>
+    <script type="text/javascript" src="play/client/ClientLobby.js" defer="defer"></script>
+    <script type="text/javascript" src="play/LobbyService.js" defer="defer"></script>
+    <script type="text/javascript" src="games/minesweeper/server/MinesweeperService.js" defer="defer"></script>
+    <script type="text/javascript" src="games/minesweeper/Messages.js" defer="defer"></script>
+    <script type="text/javascript" src="games/minesweeper/client/MinesweeperGame.js" defer="defer"></script>
+    <script type="text/javascript" src="games/minesweeper/client/Minefield.js"> defer="defer"</script>
+    <script type="text/javascript" src="games/minesweeper/client/MinesweeperApp.js" defer="defer"></script>
+    <script type="text/javascript" src="games/minesweeper/client/MinesweeperScore.js" defer="defer"></script>
+    <script type="text/javascript" src="index.js" defer="defer"></script>
+    <script type="text/javascript" src="components/LobbyComponent.js" defer="defer"></script>
+    <script type="text/javascript" src="components/Chat.js" defer="defer"></script>
+    <script type="text/javascript" src="components/GameDescription.js" defer="defer"></script>
+    <script type="text/javascript" src="components/GameList.js" defer="defer"></script>
+    <script type="text/javascript" src="components/Header.js" defer="defer"></script>
+    <script type="text/javascript" src="components/NoMatch.js" defer="defer"></script>
 
 </head>
 <body>
     <div id="content"></div>
-    <script type="text/javascript" src="components/App.js"></script>
+    <script type="text/javascript" src="components/App.js" defer="defer"></script>
 </body>
 </html>
