--- a/index.html
+++ b/index.html
@@ -32,12 +32,18 @@
     <script type="text/javascript" src="play/server/GameService.js" defer="defer"></script>
     <script type="text/javascript" src="play/client/ClientLobby.js" defer="defer"></script>
     <script type="text/javascript" src="play/LobbyService.js" defer="defer"></script>
+
     <script type="text/javascript" src="games/minesweeper/server/MinesweeperService.js" defer="defer"></script>
     <script type="text/javascript" src="games/minesweeper/Messages.js" defer="defer"></script>
     <script type="text/javascript" src="games/minesweeper/client/MinesweeperGame.js" defer="defer"></script>
     <script type="text/javascript" src="games/minesweeper/client/Minefield.js"> defer="defer"</script>
     <script type="text/javascript" src="games/minesweeper/client/MinesweeperApp.js" defer="defer"></script>
     <script type="text/javascript" src="games/minesweeper/client/MinesweeperScore.js" defer="defer"></script>
+
+    <script type="text/javascript" src="games/chess/client/ChessGame.js" defer="defer"></script>
+    <script type="text/javascript" src="games/chess/client/ChessApp.js" defer="defer"></script>
+    <script type="text/javascript" src="games/chess/server/ChessService.js" defer="defer"></script>
+
     <script type="text/javascript" src="index.js" defer="defer"></script>
     <script type="text/javascript" src="components/LobbyComponent.js" defer="defer"></script>
     <script type="text/javascript" src="components/Chat.js" defer="defer"></script>
