--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script type="text/javascript" src="games/minesweeper/client/MinesweeperApp.js" defer="defer"></script>
     <script type="text/javascript" src="games/minesweeper/client/MinesweeperScore.js" defer="defer"></script>
 
+    <script type="text/javascript" src="games/chess/Messages.js" defer="defer"></script>
     <script type="text/javascript" src="games/chess/client/ChessGame.js" defer="defer"></script>
     <script type="text/javascript" src="games/chess/client/ChessApp.js" defer="defer"></script>
     <script type="text/javascript" src="games/chess/server/ChessService.js" defer="defer"></script>
