--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
     <script type="text/javascript" src="games/chess/client/ChessGame.js" defer="defer"></script>
     <script type="text/javascript" src="games/chess/client/ChessApp.js" defer="defer"></script>
     <script type="text/javascript" src="games/chess/server/ChessService.js" defer="defer"></script>
+    <script type="text/javascript" src="games/chess/client/ChessBoard.js" defer="defer"></script>
+
+    <script type="text/javascript" src="games/anagrams/Messages.js" defer="defer"></script>
+    <script type="text/javascript" src="games/anagrams/client/AnagramsGame.js" defer="defer"></script>
+    <script type="text/javascript" src="games/anagrams/client/AnagramsApp.js" defer="defer"></script>
+    <script type="text/javascript" src="games/anagrams/server/AnagramsService.js" defer="defer"></script>
 
     <script type="text/javascript" src="index.js" defer="defer"></script>
     <script type="text/javascript" src="components/LobbyComponent.js" defer="defer"></script>
