--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
           crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 
+    <script type="text/javascript" src="Configuration.js" defer="defer"></script>
+
     <script type="text/javascript" src="play/Utils.js" defer="defer"></script>
+    <script type="text/javascript" src="play/IPlayerInfo.js" defer="defer"></script>
     <script type="text/javascript" src="play/client/EventDispatcher.js" defer="defer"></script>
     <script type="text/javascript" src="play/client/Camera.js" defer="defer"></script>
     <script type="text/javascript" src="play/client/Game.js" defer="defer"></script>
@@ -43,10 +46,10 @@
     <script type="text/javascript" src="games/minesweeper/client/MinesweeperScore.js" defer="defer"></script>
 
     <script type="text/javascript" src="games/chess/Messages.js" defer="defer"></script>
+    <script type="text/javascript" src="games/chess/ChessBoard.js" defer="defer"></script>
     <script type="text/javascript" src="games/chess/client/ChessGame.js" defer="defer"></script>
     <script type="text/javascript" src="games/chess/client/ChessApp.js" defer="defer"></script>
     <script type="text/javascript" src="games/chess/server/ChessService.js" defer="defer"></script>
-    <script type="text/javascript" src="games/chess/client/ChessBoard.js" defer="defer"></script>
 
     <script type="text/javascript" src="games/anagrams/Messages.js" defer="defer"></script>
     <script type="text/javascript" src="games/anagrams/client/AnagramsGame.js" defer="defer"></script>
