--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script type="text/javascript" src="play/client/ClientLobby.js" defer="defer"></script>
     <script type="text/javascript" src="play/LobbyService.js" defer="defer"></script>
 
+    <script type="text/javascript" src="games/minesweeper/server/Minefield.js"> defer="defer"</script>
     <script type="text/javascript" src="games/minesweeper/server/MinesweeperService.js" defer="defer"></script>
     <script type="text/javascript" src="games/minesweeper/Messages.js" defer="defer"></script>
     <script type="text/javascript" src="games/minesweeper/client/MinesweeperGame.js" defer="defer"></script>
