--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <script type="text/javascript" src="games/chess/Messages.js" defer="defer"></script>
     <script type="text/javascript" src="games/chess/ChessBoard.js" defer="defer"></script>
     <script type="text/javascript" src="games/chess/client/ChessGame.js" defer="defer"></script>
+    <script type="text/javascript" src="games/chess/client/ChessScore.js" defer="defer"></script>
     <script type="text/javascript" src="games/chess/client/ChessApp.js" defer="defer"></script>
     <script type="text/javascript" src="games/chess/server/ChessService.js" defer="defer"></script>
 
