--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <script type="text/javascript" src="games/anagrams/server/AnagramsService.js" defer="defer"></script>
 
 
-    <!--<script type="text/javascript" src="games/mahjong/Messages.js" defer="defer"></script>-->
+    <script type="text/javascript" src="games/mahjong/Messages.js" defer="defer"></script>
     <script type="text/javascript" src="games/mahjong/client/MahjongGame.js" defer="defer"></script>
     <script type="text/javascript" src="games/mahjong/client/MahjongApp.js" defer="defer"></script>
     <script type="text/javascript" src="games/mahjong/server/MahjongService.js" defer="defer"></script>
