--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="play/client/Camera.js" defer="defer"></script>
     <script type="text/javascript" src="play/client/Game.js" defer="defer"></script>
     <script type="text/javascript" src="play/client/Sprite.js" defer="defer"></script>
-    <script type="text/javascript" src="play/client/PlayerInfo.js"> defer="defer"</script>
+    <script type="text/javascript" src="play/client/PlayerInfo.js" defer="defer"></script>
     <script type="text/javascript" src="play/Messages.js" defer="defer"></script>
     <script type="text/javascript" src="play/server/Service.js" defer="defer"></script>
     <script type="text/javascript" src="play/server/ServerLobby.js" defer="defer"></script>
@@ -38,7 +38,7 @@
     <script type="text/javascript" src="play/client/ClientLobby.js" defer="defer"></script>
     <script type="text/javascript" src="play/LobbyService.js" defer="defer"></script>
 
-    <script type="text/javascript" src="games/minesweeper/Minefield.js"> defer="defer"</script>
+    <script type="text/javascript" src="games/minesweeper/Minefield.js" defer="defer"></script>
     <script type="text/javascript" src="games/minesweeper/server/MinesweeperService.js" defer="defer"></script>
     <script type="text/javascript" src="games/minesweeper/Messages.js" defer="defer"></script>
     <script type="text/javascript" src="games/minesweeper/client/MinesweeperGame.js" defer="defer"></script>
