--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           crossorigin="anonymous">
     <link rel="stylesheet" href="app/css/main.css">
 
-    <script type="text/javascript" src="Configuration.js" defer="defer"></script>
+    <script type="text/javascript" src="app/Configuration.js" defer="defer"></script>
 
     <script type="text/javascript" src="app/play/Utils.js" defer="defer"></script>
     <script type="text/javascript" src="app/play/IPlayerInfo.js" defer="defer"></script>
