--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
 
 
     <script type="text/javascript" src="app/games/mahjong/Messages.js" defer="defer"></script>
+    <script type="text/javascript" src="app/games/mahjong/Tiles.js" defer="defer"></script>
+    <script type="text/javascript" src="app/games/mahjong/Hand.js" defer="defer"></script>
+    <script type="text/javascript" src="app/games/mahjong/MeldGrouping.js" defer="defer"></script>
+    <script type="text/javascript" src="app/games/mahjong/Table.js" defer="defer"></script>
+    <script type="text/javascript" src="app/games/mahjong/Tile.js" defer="defer"></script>
     <script type="text/javascript" src="app/games/mahjong/client/MahjongGame.js" defer="defer"></script>
     <script type="text/javascript" src="app/games/mahjong/client/MahjongApp.js" defer="defer"></script>
     <script type="text/javascript" src="app/games/mahjong/server/MahjongService.js" defer="defer"></script>
