--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
     <script type="text/javascript" src="app/games/mahjong/server/MahjongService.js" defer="defer"></script>
 
 
+    <script type="text/javascript" src="app/games/tetrominoes/Messages.js" defer="defer"></script>
     <script type="text/javascript" src="app/games/tetrominoes/client/TetrominoesGame.js" defer="defer"></script>
+    <script type="text/javascript" src="app/games/tetrominoes/client/TetrominoesScore.js" defer="defer"></script>
     <script type="text/javascript" src="app/games/tetrominoes/client/TetrominoesApp.js" defer="defer"></script>
     <script type="text/javascript" src="app/games/tetrominoes/server/TetrominoesService.js" defer="defer"></script>
 
