--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 
     <title>Games on Steroids</title>
 
@@ -61,7 +61,10 @@
     <script type="text/javascript" src="app/games/mahjong/Messages.js" defer="defer"></script>
     <script type="text/javascript" src="app/games/mahjong/Tiles.js" defer="defer"></script>
     <script type="text/javascript" src="app/games/mahjong/Hand.js" defer="defer"></script>
-    <script type="text/javascript" src="app/games/mahjong/MeldGrouping.js" defer="defer"></script>
+    <script type="text/javascript" src="app/games/mahjong/HandForm.js" defer="defer"></script>
+    <script type="text/javascript" src="app/games/mahjong/WinningHand.js" defer="defer"></script>
+    <script type="text/javascript" src="app/games/mahjong/WinningHandLogic.js" defer="defer"></script>
+    <script type="text/javascript" src="app/games/mahjong/WinningHandType.js" defer="defer"></script>
     <script type="text/javascript" src="app/games/mahjong/Table.js" defer="defer"></script>
     <script type="text/javascript" src="app/games/mahjong/Tile.js" defer="defer"></script>
     <script type="text/javascript" src="app/games/mahjong/client/MahjongGame.js" defer="defer"></script>
