--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
 
     <title>Games on Steroids</title>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.4/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.4/react-dom.js"></script>
-    <script src="https://npmcdn.com/history/umd/History.js"></script>
-    <script src="https://npmcdn.com/react-router/umd/ReactRouter.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
-    <script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
+    <script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.4/react.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.4/react-dom.js"></script>
+    <script src="//npmcdn.com/history/umd/History.js"></script>
+    <script src="//npmcdn.com/react-router/umd/ReactRouter.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
+    <script src="//cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css"
           crossorigin="anonymous">
     <link rel="stylesheet" href="app/css/main.css">
 
+    <script type="text/javascript" src="app/play/Utils.js" defer="defer"></script>
+
     <script type="text/javascript" src="app/Configuration.js" defer="defer"></script>
 
-    <script type="text/javascript" src="app/play/Utils.js" defer="defer"></script>
     <script type="text/javascript" src="app/play/IPlayerInfo.js" defer="defer"></script>
     <script type="text/javascript" src="app/play/client/EventDispatcher.js" defer="defer"></script>
     <script type="text/javascript" src="app/play/client/Camera.js" defer="defer"></script>
@@ -85,6 +87,7 @@
     <script type="text/javascript" src="app/components/GameList.js" defer="defer"></script>
     <script type="text/javascript" src="app/components/Header.js" defer="defer"></script>
     <script type="text/javascript" src="app/components/NoMatch.js" defer="defer"></script>
+    <script type="text/javascript" src="app/components/FacebookLogin.js" defer="defer"></script>
 
 </head>
 <body>
