--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <script type="text/javascript" src="app/games/tetrominoes/server/TetrominoesService.js" defer="defer"></script>
 
     <script type="text/javascript" src="app/index.js" defer="defer"></script>
+    <script type="text/javascript" src="app/components/GameOver.js" defer="defer"></script>
     <script type="text/javascript" src="app/components/LobbyComponent.js" defer="defer"></script>
     <script type="text/javascript" src="app/components/Chat.js" defer="defer"></script>
     <script type="text/javascript" src="app/components/GameDescription.js" defer="defer"></script>
